[tool.poetry]
name = "prisoner"
version = "0.1.0"
description = ""
authors = ["Gurkirat Singh <tbhaxor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
